ui: fix article line spacing

--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -207,12 +207,6 @@ a[target="_blank"]::after {
   margin-bottom: 0.5rem !important;
 }
 
-article {
-  font-size: 20px;
-  line-height: 1.86;
-  font-family: Lora, sans-serif;
-}
-
 .article-headline {
   font-family: Georgia, Times, Times New Roman, serif;
   font-size: 3.2rem;
